# DZ12.2-pytest

./: pyproject.toml
tests/: test_arrs.py
utils/: arrs.py
