[tool.poetry]
name = "pytest-dz12-2"
version = "0.1.0"
description = ""
authors = ["Dmitry <kip@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_dz12"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
